# AeroLake

./: .env.example  .funcignore  .gitignore  .pre-commit-config.yaml  README.md  function_app.py  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
az-functions/airlabs-api-timer/: function_app.py
az-functions/data_pipeline/: api_client.py  azure_io.py  data_processor.py  function_app.py  transformers.py
az-functions/open-weather-map-api/: function_app.py  requirements.txt
core/: config.py  models.py
data_pipeline/: api_client.py  azure_io.py  config.py  data_processor.py  function_app.py  gold_processor.py  ingest_airlabs.py  ingest_weather.py  polars_helpers.py  requirements.txt
frontend/: app.py  data_loader.py
frontend/components/: __init__.py  analytics.py  flights.py  map_view.py
frontend/styles/: __init__.py  flight_time_slider.js.j2  map.css  sidebar.css
tests/: test_api_client.py  test_data_processor.py  test_frontend.py  test_frontend_components.py  test_gold_processor.py
